--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
 .App {
   text-align: center;
+  font-size: 0.9rem;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:any-link {
+  color: inherit;
+  text-decoration: inherit;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body,
+input,
+button,
+label {
+  font-family: "Noto Sans", "Lato", sans-serif;
+}
+
+button {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 0.37em;
+  cursor: pointer;
+  border-radius: 100px;
+  outline: none;
+  border: none;
+  padding: 0.87em 1.1em;
+  background-color: #28517722;
+  transition: all 125ms linear;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #28517711;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+input,
+button,
+label {
+  font-family: "Noto Sans", "Lato", sans-serif;
+  font-weight: 600;
+}
+
+input {
+  padding: 0.67em 1em;
+  font-size: 1rem;
+  outline: none;
+  border: none;
+  background: #efefef;
+  border-radius: 100px;
+  font-weight: 600;
+}
+
+label {
+  font-weight: 600;
+  opacity: 0.5;
+  align-self: flex-start;
+}
+
+h2,
+h1 {
+  font-family: "Lato", sans-serif;
+  font-weight: 800;
+  letter-spacing: -0.2px;
+}
+
+@media screen and (min-width: 425px) {
+  ::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 500px;
   }
-  to {
-    transform: rotate(360deg);
+
+  ::-webkit-scrollbar {
+    cursor: pointer;
+    width: 14px;
+    height: 14px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    border-radius: 9999px;
+    background-color: #323232;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
   }
 }
